@@ -1,18 +1,18 @@
 #title {
-	background-image: none !important;
+    background-image: none !important;
     right: 0px !important;
 }
 
 #title h1 {
-	background-image: none !important;
-	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled=true, sizingMethod=scale, src='/images/middle.png');
+    background-image: none !important;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled=true, sizingMethod=scale, src='/images/middle.png');
     margin-right: 0px !important;
     padding-right: 15px !important;
 }
 
 #icon {
-	background-image: none !important;
-	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled=true, sizingMethod=crop, src='/images/icon-gold.png');
+    background-image: none !important;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled=true, sizingMethod=crop, src='/images/icon-gold.png');
 }
 
 #nav {
@@ -20,7 +20,7 @@
 }
 
 #content ul {
-	margin-left: 2em !important;
+    margin-left: 2em !important;
 }
 
 #content li {
@@ -30,4 +30,8 @@
 
 #navlist .subtitle {
     font-weight: normal !important;
+}
+
+img {
+    behavior: url( /pngbehavior.htc );
 }
