@@ -8,7 +8,7 @@ p { margin: 0px 0px 4px 0px; }
 <p>WebKit is the system framework used on Mac OS X by <a href="http://www.apple.com/safari/">Safari</a>, Dashboard, Mail.app, and many other OS X applications.  It is based on the <a href="http://khtml.info">KHTML</a> engine from <a href="http://kde.org/">KDE</a>.</p>
 
 <h2>Getting involved</h2>
-<a href="http://nightly.webkit.org/"><img src="images/download.png" id="download" alt="download nightly" /></a>
+<a href="http://nightly.webkit.org/"><img src="images/download.png" id="download" alt="download nightly" width="189" height="65" /></a>
 <p>There are many ways in which you can get involved with the project. You can:</p>
 <ul>
 	<li><a href="building/checkout.html">check out</a> and <a href="building/build.html">build the source code</a></li>
